# ubac

./: .gitignore  CMakeLists.txt  README.md  discovery.py  partitions.csv  sdkconfig.defaults
hardware/: BOM_Main Board_Schematic Main_2026-02-19.csv  ProPrj_Bed Temp Regulation_2026-02-19.epro  README.md
main/: CMakeLists.txt  Kconfig.projbuild  ads1115.c  ads1115.h  dns_server.c  dns_server.h  fan_ctrl.c  fan_ctrl.h  i2c_manager.c  i2c_manager.h  mux.c  mux.h  ntc_history.c  ntc_history.h  ntc_sensor.c  ntc_sensor.h  ubac_main.c  udp_responder.c  udp_responder.h  web_server.c  web_server.h  wifi_app.c  wifi_app.h
main/html/: dashboard.html  index.html
