idf_component_register(SRCS "ubac_main.c"
                       "i2c_manager.c"
                       "mux.c"
                       "ads1115.c"
                       "ntc_sensor.c"
                       "fan_ctrl.c"
                       "web_server.c"
                       INCLUDE_DIRS ".")
