idf_component_register(SRCS "ubac_main.c"
                       "i2c_manager.c"
                       "mux.c"
                       "ads1115.c"
                       "ntc_sensor.c"
                       "fan_ctrl.c"
                       "web_server.c"
                       "wifi_app.c"
                       "dns_server.c"
                       "udp_responder.c"
                       "ntc_history.c"
                       INCLUDE_DIRS "."
                       EMBED_TXTFILES "html/config.html" "html/dashboard.html")
